--- a/index.html
+++ b/index.html
@@ -113,16 +113,21 @@
                 <div class="work">
                     <img src="images/work-2.png"> 
                     <div class="layer">
-                        <h3>Gym Landing</h3>
-                        <p>A responsive Amazon homepage clone designed using HTML and CSS. This project replicates the layout, design elements, and navigation of the popular e-commerce website. Key features include a dynamic product grid, a sleek navigation bar, and an intuitive user interface, all focused on showcasing front-end development skills in HTML and CSS</p>
+                        <h3>Online Blood Bank Management System  </h3>
+                        <p>Online Blood Bank is designed for managing and storing all the data of available bloodin blood bank. It involves login of donors, receivers and search for blood according to requirements. Website helps in maintaining a count of packets of different blood groups available at that instance in the blood bank.
+</p>
                         <a href="#"><i class="fa-solid fa-link"></i></a>
                     </div>
                 </div>
                 <div class="work">
                     <img src="images/work-3.png">
                     <div class="layer">
-                        <h3>Amazon Clone</h3>
-                        <p>A responsive Amazon homepage clone designed using HTML and CSS. This project replicates the layout, design elements, and navigation of the popular e-commerce website. Key features include a dynamic product grid, a sleek navigation bar, and an intuitive user interface, all focused on showcasing front-end development skills in HTML and CSS</p>
+                        <h3>Online Billing Software</h3>
+                        <p>Billing Software, built with HTML, CSS, PHP, and MySQL also used Bootstrap
+                            For making website fully responsive Effortlessly manage customer details,   
+                            product inventory, and generate accurate bills. The dashboard provides real-time                   
+                             updates on total sales and revenue, making business management simpler than ever
+</p>
                         <a href="#"><i class="fa-solid fa-link"></i></a>
                     </div>
                 </div>
@@ -140,8 +145,8 @@
                     <p><i class="fa-solid fa-at"></i>gopalpawar0383@gmail.com</p>
                     <p><i class="fa-solid fa-phone-volume"></i>8459199496</p>
                     <div class="social-icon">
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/gopaldpawar/"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/"><i class="fa-brands fa-github"></i></a>
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
                     </div>
                     <a href="images/mycv.pdf" download class="btn btn2">Download CV</a>
